Tried to fix alignment issue and removed background color

--- a/css/modals/invite/_invite_more.scss
+++ b/css/modals/invite/_invite_more.scss
@@ -218,4 +218,10 @@
         height: 48px;
         padding: 12px 16px;
     }
+    .invite-more-button{
+        background: transparent;
+    }
+}
+.invite-more-button{
+    background: transparent;
 }
