--- a/react/features/toolbox/components/web/toolbar_buttons.css
+++ b/react/features/toolbox/components/web/toolbar_buttons.css
@@ -1,15 +1,17 @@
-.toolbox-content-wrapper{
-    display:flex;
-    flex-direction:column;
-    margin:0 8%;
-    max-width:100%
+.toolbox-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin: 0 8%;
+    max-width: 100%
 }
-.toolbox-content-wrapper1{
-    display:flex;
-    flex-direction:column;
-    margin:0 10%;
-    max-width:100%
+
+.toolbox-content-wrapper1 {
+    display: flex;
+    flex-direction: column;
+    margin: 0 8%;
+    max-width: 100%
 }
+
 .new-toolbox {
     bottom: 0;
     left: 0;
@@ -20,30 +22,33 @@
     pointer-events: none;
     z-index: 252;
 }
+
 @media only screen and (max-width: 1610px) {
     .toolbox-content-wrapper {
-        display:flex;
-        flex-direction:column;
-        margin:0 11%;
-        max-width:100%
+        display: flex;
+        flex-direction: column;
+        margin: 0 0;
+        max-width: 100%
     }
 }
+
 @media only screen and (max-width: 1610px) {
     .toolbox-content-wrapper1 {
-        display:flex;
-        flex-direction:column;
-        margin:0 11%;
-        max-width:100%
+        display: flex;
+        flex-direction: column;
+        margin: 0 11%;
+        max-width: 100%
     }
 }
+
 .premeeting-screen .content-controls #new-toolbox .toolbox-content-items {
     background: 0 0;
     box-shadow: none;
     display: flex;
     justify-content: space-evenly;
     padding: 8px 0;
-    /*margin-left: 50%;*/
 }
+
 .leftwatermark {
     left: 20px;
     top: 20px;
@@ -60,5 +65,22 @@
 .hangup-button {
     background-color: #141414;
 }
-@media (max-width:500px){.toolbox-content-mobile{margin-bottom:0; flex-direction: column}}
 
+@media (max-width: 500px) {
+    .toolbox-content-mobile {
+        margin-bottom: 0;
+        flex-direction: column
+    }
+}
+
+.premeeting-screen .content-controls #new-toolbox .toolbox-content-wrapper {
+    box-sizing: border-box;
+    width: 100%;
+    content-visibility: hidden;
+}
+
+.invite-more-button {
+    background: transparent;
+}
+
+@media (hover:hover) and (pointer:fine){.invite-more-button:hover{background:transparent}}
